<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_notificatiion"
            android:icon="@drawable/notifications"
            android:title="@string/menu_notification" />
        <item
            android:id="@+id/nav_service"
            android:icon="@drawable/services"
            android:title="@string/Servies" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/person"
            android:title="@string/menu_profile" />
    </group>
</menu>